Resolving Html issues

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 </head>
 <body>
     
-    <h1 class="sr-only">Interactive Rative Componet</h1>
-
+    
     <!-- Start Page Content -->
     <main>
+        <h1 class="sr-only">Interactive Rative Componet</h1>
         <!-- Start Rating Card -->
         <section id="rate" class="card show">
             <header>
@@ -31,11 +31,11 @@
             </div>
 
             <ul>
-                <li class="circle" rate="1" >1</li>
-                <li class="circle" rate="2" >2</li>
-                <li class="circle" rate="3" >3</li>
-                <li class="circle" rate="4" >4</li>
-                <li class="circle" rate="5" >5</li>
+                <li class="circle" >1</li>
+                <li class="circle" >2</li>
+                <li class="circle" >3</li>
+                <li class="circle" >4</li>
+                <li class="circle" >5</li>
             </ul>
 
             <button>Submit</button>
@@ -54,7 +54,7 @@
             </div>
 
             <div class="content">
-                <h2><center>Thank you!</center></h2>
+                <h2 style="text-align:center">Thank you!</h2>
                 <p style="text-align: center;" >We appreciate you taking the time to give a rating. If you ever need more support, don’t hesitate to get in touch!</p>
             </div>
         </section>
